TAG: lib_java_dbsmgd-tr7493-1
DATE: 01/29/2008
STAFF: sc
CHANGES:
1) CoordMapCollectionKeyLookup - updated to return null rather than 
    exception upon failed lookup (not in MGI)
2) CoordMapFeatureKeyLookup, CoordMapFeatureLookup - added

TAG: lib_java_dbsmgd-tr7493-BP
DATE: 01/28/2008
STAFF: sc
CHANGES: Gene Traps Less Filling Branch Point

TAG: lib_java_dbsmgd-3-5-1-2
DATE: 11/14/2006
STAFF: lec
CHANGES: TR8001: TIGR to DFCI

TAG: lib_java_dbsmgd-3-5-1-1
DATE: 09/06/2006
STAFF: sc
CHANGES: merge build36 branch to trunK

TAG: lib_java_dbsmgd-build36-2
DATE: 8/21/2006
STAFF: sc
CHANGES:
1) LogicalDBConstants - added VEGA

TAG: lib_java_dbsmgd-build36-1
DATE: 8/16/2006
STAFF: sc
CHANGES:
1) TR7619, item 4, init the translator cache in StrainKeyLookup constructor, 
    so connection to database for any app that uses StrainKeylookup may 
    be closed.

TAG: lib_java_dbsmgd-build36-BP
DATE: 6/27/2006
STAFF: sc
CHANGES:
1) Branch point tag for Build 36

TAG: lib_java_dbsmgd-3-5-0-3
DATE: 5/5/2006
STAFF: dbm
CHANGES:
1) Added clean.code to buildall task

TAG: lib_java_dbsmgd-3-5-0-2
DATE: 5/2/2006
STAFF: dbm
CHANGES:
1) Merge configuration changes from tr6549 branch

TAG: lib_java_dbsmgd-3-5-0-1
DATE: 04/28/06
STAFF: sc
CHANGES: MGI 3.5 merge tr7062 to trunk

TAG: lib_java_dbsmgd-3-4-4-2
DATE: 4/10/2006
STAFF: sc
CHANGES: generatedTables.txt - corrected merge

TAG: lib_java_dbsmgd-3-4-4-1
DATE: 4/7/2006
STAFF: pf
CHANGES: merge tr7230 branch to trunk

TAG: lib_java_dbsmgd-tr7203-1
TAG: lib_java_dbsmgd-tr7392-4  ERROR wrong branch name
DATE: 03/14/06
STAFF: sc
CHANGES:
1) merged tr7392 changes to tr7203 branch
2) generated tables.txt - removed SNP* tables, add MGI_dbinfo and MGI_Tables
3) MGITypeLookup - corrected lookup method parameter names
4) VocabKeyLookup - corrected cut an paste errors in comments
5) MGIUserKeyLookup - initial add/commit
6) build.targets.xml - added clean.code as dependency to buildall

TAG: lib_java_dbsmgd-tr6594-3
DATE: 3/27/2006
STAFF: dbm