@@ -1,3 +1,9 @@
+TAG: lib_java_dbsmgd-tr7493-2
+DATE: 03/31/2008
+STAFF: sc
+CHANGES:
+1) SeqIdsByMarkerIdLookup (egload)
+
 TAG: lib_java_dbsmgd-tr7493-1
 DATE: 01/29/2008
 STAFF: sc
